# adventofcode.rs

./: .gitignore  Cargo.toml  README.md  justfile
.aocf/: config
.github/workflows/: audit-check.yml  ci.yml
.run/: run_aoc.run.xml
aoclp/: Cargo.toml
aoclp/src/: captures.rs  dij.rs  functional.rs  lib.rs  looping.rs  mapping.rs  positioning.rs  solvers_impl.rs  str.rs
aoclp/src/forth/: mod.rs  stack.rs  word.rs
aoclp/src/forth/word/: builtins.rs  custom.rs  value.rs
aoclp/src/forth/word/builtins/: arith.rs  stack.rs
aoclp/src/mapping/: canvas.rs  dij.rs
aoclp/src/mapping/canvas/: dynamic.rs  fixed.rs
aoclp/src/positioning/: direction.rs  pt.rs  pt_3d.rs  turtle.rs
aoclp/src/positioning/direction/: eight_points.rs  four_points.rs
aoclp/src/solvers_impl/: input.rs  solvers.rs
aoclp_solutions/: Cargo.toml  README.md
aoclp_solutions/src/: lib.rs  main.rs
aoclp_solutions/src/helpers/: direction.rs  direction_4.rs  direction_8.rs  input.rs  solvers.rs
aoclp_solutions/src/helpers/forth/: mod.rs  word.rs
aoclp_solutions/src/helpers/forth/word/: builtins.rs  custom.rs
aoclp_solutions/src/helpers/forth/word/builtins/: arith.rs  stack.rs
aoclp_solutions/src/y2017/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
aoclp_solutions/src/y2017/helpers/: duet.rs  knot_hash.rs  mod.rs
aoclp_solutions/src/y2024/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs
aoclp_solutions/src/y2025/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs
codingquest_clp/: Cargo.toml
codingquest_clp/src/: lib.rs
codingquest_clp/src/solvers_impl/: input.rs  solvers.rs
codingquest_clp_solutions/: .gitignore  Cargo.toml  README.md
codingquest_clp_solutions/src/: helpers.rs  lib.rs  main.rs  problem_13.rs  problem_14.rs  problem_15.rs  problem_16.rs
src/: day_01.rs  day_02.rs  day_04.rs  day_05.rs  helpers.rs  lib.rs  main.rs
src/helpers/: direction_8.rs  input.rs  looping.rs  regex.rs  runner.rs  solvers.rs  turtle.rs
src/helpers/forth/: mod.rs  stack.rs  word.rs
src/helpers/forth/word/: custom.rs  value.rs
src/input/: day_01.rs
tests/days/: day_01.rs
