[workspace]
resolver = "2"
members = ["aoclp", "aoclp_solutions", "codingquest_clp", "codingquest_clp_solutions"]
default-members = ["aoclp_solutions"]

[workspace.dependencies]
anyhow = "1.0.100"
aocf = "0.1.21"
bit-vec = "0.8.0"
clap = { version = "4.5.53", features = ["derive"] }
derive-where = "1.6.0"
fancy-regex = "0.16.2"
itertools = "0.14.0"
num = "0.4.3"
paste = "1.0.15"
primes = "0.4.0"
rayon = "1.11.0"
regex = "1.12.2"
strum = { version = "0.27.2", features = ["derive"] }
