[workspace]
resolver = "3"
members = ["aoclp", "aoclp_solutions", "codingquest_clp", "codingquest_clp_solutions"]
default-members = ["aoclp_solutions"]

[workspace.dependencies]
anyhow = "1.0.102"
aocf = "0.1.21"
bit-vec = "0.9.1"
clap = { version = "4.5.60", features = ["derive"] }
derive-where = "1.6.0"
fancy-regex = "0.17.0"
gratte = "2.0.0"
itertools = "0.14.0"
num = "0.4.3"
paste = "1.0.15"
primes = "0.4.0"
rayon = "1.11.0"
regex = "1.12.3"
z3 = { version = "0.19.13", features = ["gh-release"] }
