[package]
name = "aoclp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
aocf = { workspace = true }
itertools = { workspace = true }
paste = { workspace = true }
num = { workspace = true }
regex = { workspace = true }
strum = { workspace = true, features = ["derive"] }
