[package]
name = "aoclp_solutions"
version = "0.1.0"
edition = "2021"
rust-version = "1.82.0"

[dependencies]
aoclp = { path = "../aoclp" }
bit-vec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive-where = { workspace = true }
itertools = { workspace = true }
primes = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true, features = ["derive"] }
