[package]
name = "aoclp_solutions"
version = "0.1.0"
edition = "2024"

[dependencies]
aoclp = { path = "../aoclp" }
bit-vec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
derive-where = { workspace = true }
itertools = { workspace = true }
gratte = { workspace = true }
primes = { workspace = true }
rayon = { workspace = true }
z3 = { workspace = true, features = ["gh-release"] }
